# app_diary

./: .env.example  .eslintrc.cjs  .gitignore  LICENSE  README.md  app.json  eas.json  package-lock.json  package.json  render.yaml  requirements.md  tsconfig.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: deps.py  main.py
backend/app/core/: config.py  prompts.py  supabase_client.py
backend/app/models/: schemas.py
backend/app/routers/: blog.py  chat.py  memories.py  mood.py  photos.py
backend/app/services/: _gemini_retry.py  blog_generator.py  chat_engine.py  daily_packager.py  embedding_provider.py  embeddings.py  mood_chart.py  mood_events.py  persona.py  photo_retry.py  proactive.py  vision.py
backend/scripts/: backfill_embeddings.py
docs/: code-standards.md  deployment-guide.md  deployment.md  design-guidelines.md  google-signin-setup.md  system-architecture.md  tech-stack.md
plans/20260427-2255-base-scaffolding/: plan.md
plans/20260430-1430-deploy-backend-and-eas-build/: plan.md
plans/reports/: docs-manager-20260430-deploy-docs.md  project-manager-20260430-deploy-sync.md
plans/research/: researcher-01-stack-decisions.md
src/app/: _layout.tsx  auth.tsx  capture.tsx  chat.tsx  index.tsx  journal-editor.tsx  mood.tsx  onboarding.tsx  privacy.tsx  profile.tsx  settings.tsx
src/components/: avatar-picker-sheet.tsx  avatar.tsx  daily-photo-item.tsx  empty-state.tsx  fab.tsx  glass-overlay.tsx  journal-card.tsx  lock-guard.tsx  mood-chart.tsx  mood-message-card.tsx  pin-pad.tsx  (+5 more)
(+32 files in other folders)
